# wgsl-analyzer

./: .gitignore  .vscodeignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
wgsl-ast/: Cargo.toml  readme.md
wgsl-ast/src/: lib.rs
wgsl-ast/src/bench/: mod.rs  parser.rs  utils.rs
wgsl-ast/src/bench/source_examples/: top.wgsl
wgsl-ast/src/bench/source_examples/function/: function_basic.wgsl  function_no_args.wgsl
wgsl-ast/src/diagnostic/: mod.rs  severity.rs
wgsl-ast/src/front/: mod.rs  span.rs
wgsl-ast/src/front/ast/: mod.rs
wgsl-ast/src/front/ast/expression/: lhs_expression.rs  mod.rs  (+1 more)
wgsl-ast/src/front/token/: ident.rs  mod.rs  parse.rs  template.rs
wgsl-ast/src/module/: declaration.rs  mod.rs  module_scope.rs  scope.rs  store.rs  type_store.rs
wgsl-ast/src/module/declaration/: function.rs  type.rs  variable_value.rs
wgsl-ast/src/module/store/: handle.rs
wgsl-language-server/: Cargo.toml
wgsl-language-server/src/: block_ext.rs  completion_provider.rs  completions.rs  diagnostic.rs  document_tracker.rs  find_definition.rs  fmt.rs  lexer.rs  lib.rs  lsp_range.rs  parser.rs  pretty_error.rs  range_tools.rs  span_tools.rs  symbol_provider.rs  tracked_document.rs  util.rs  wgsl_error.rs
wgsl-language-server/src/completions/: builtins.rs  completion_provider.rs  document_completions.rs  keywords.rs  property_access.rs  swizzle.rs
wgsl-language-server/src/lexer/: comment.rs  keyword.rs  template_disambiguation.rs  test.rs
wgsl-language-server/src/lexer/test/: comment.rs  ident.rs  keyword.rs  literal.rs  misc.rs  operator.rs
wgsl-language-server/src/pretty_error/: error_context.rs  expression_error.rs  function_error.rs  handle_expression.rs  label_tools.rs  scalar_value.rs  validation_error.rs
wgsl-language-server/src/pretty_error/error_context/: as_type.rs  code_provider.rs  ident_query.rs  index_impl.rs  span_priovider.rs  span_provider.rs  type_print.rs
(+16 files in other folders)
