[package]
name = "wgsl-language-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
js-sys = "0.3.53"
log = "0.4.20"
lsp-types = "0.90.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3.1"
serde_json = "1.0.99"
wasm-bindgen = "0.2.76"
wgsl-ast = { path = "../wgsl-ast" }

[profile.release]
lto = true
opt-level = 'z'
