[package]
name = "wgsl-language-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
codespan-reporting = "0.11.1"
console_error_panic_hook = "0.1.6"
either = "1.13.0"
js-sys = "0.3.53"
lsp-types = "0.97.0"
naga = { version = "22.1.0", features = ["wgsl-in"] }
regex = "1.9.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.99"
wasm-bindgen = "0.2.76"

[profile.release]
lto = true
opt-level = 'z'
